styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');

a {
  text-decoration: none;
}

button {
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
}

/* Start Header */

header {
  display: flex;
  margin-top: 15px;
  padding: 0px 8%;
  justify-content: space-between;
  align-items: center;
}

.logo-small {
  min-width: 75px;
}

nav {
  display: flex;
  align-items: flex-start;
}

nav a, .join a {
  padding: 10px;
}

.link-text {
  font-family: Raleway;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  color: #000000;
}

header button {
  background-color: #000000;
  color: #FFFFFF;
  margin-top: 6px;
  margin-left: 10px;
  padding: 5px 20px;
  border-radius: 15px;
  font-family: Inter;
  font-weight: 500;
  font-size: 17px;
}

@media screen and (max-width: 1000px) {
  header button {
    display: none;
  }
}

/* End Header */

/* Start Hero */

.hero-section, .guide-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

h1 {
  margin-top: 15px;
  margin-bottom: 20px;
  font-family: Montserrat;
  font-style: normal;
  font-weight: 300;
  font-size: 70px;
  letter-spacing: 0.05em;
  color: #000000;
}

@media screen and (max-width: 1000px) {
  h1 {
    margin-top: 30px;
  }
}

.hero-section div {
  display: flex;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 5px;
}

.hero-section h2 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 300;
  font-size: 30px;
  color: #000000;
}

.hero-section button, .guide-section button {
  background-color: #000000;
  color: #FFFFFF;
  margin-top: 5px;
  padding: 10px 45px;
  border-radius: 32px;
  font-family: Inter;
  font-weight: 500;
  font-size: 20px;
}

/* End Hero*/

/* Start About */

.about-section {
  background-image: url('/big-leaf-separator.svg');
  background-position: 0px -550px;
  min-height: 1150px;
  margin-top: 3%;
  padding-left: 35px;
  padding-right: 35px;
}

.fraktal-mission {
  position: relative;
  margin: 0 auto;
  width: 600px;
  top: 210px;
}

.fraktal-mission h2 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 500;
  color: #FFFFFF;
  font-size: 37px;
  text-align: center;
}

.fraktal-mission p {
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #FFFFFF;
  font-size: 21px;
  margin-top: 40px;
}

.fraktal-icons {
  display: flex;
  justify-content: space-evenly;
  margin-top: 290px;
}

.fraktal-icons div {
  width: 240px;
}

.fraktal-icons h4 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: bold;
  color: #000000;
  text-align: center;
  font-size: 23px;
  margin-top: 30px;
}

.fraktal-icons p {
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #000000;
  text-align: center;
  font-size: 18px;
  margin-top: 30px;
}

@media screen and (max-width: 720px) {
  .fraktal-mission {
    top: 400px;
    width: 100%;
  }
  .fraktal-icons {
    display: none;
  }
}

/* End About */

/* Start Guide */

.guide-section {
  background-image: url('/vectors.svg');
  min-height: 840px;
  padding-left: 35px;
  padding-right: 35px;
}

.guide-section h2{
  font-family: Raleway;
  font-style: normal;
  font-weight: 400;
  font-size: 37px;
  color: #000000;
  margin-top: 25px;
  margin-bottom: 50px;
  text-align: center;
}

.guide-icons {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}

.guide-icons p{
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #000000;
  font-size: 17px;
  text-align: center;
  margin-bottom: 35px;
}

.guide-icons div{
  width: 230px;
}

.guide-section button{
  margin-top: 15px;
}

/* End Guide */

/* Start Benefits */

.benefits-section {
  background-image: url('/side-separator.svg');
  background-position: top -115px right;
  min-height: 1100px;
}

.heading-div {
  width: 600px;
  margin: 0 auto;
  margin-bottom: 350px;
}

.heading-div h2 {
  font-family: Raleway;
  font-style: normal;
  font-weight: 400;
  font-size: 37px;
  color: #000000;
  text-align: center;
  padding-top: 10px;
}

.benefits-icon {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 600px;
  margin-top: 50px;
  margin-left: 10%;
}

.benefits-icon p {
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #000000;
  font-size: 17px;
  width: 320px;
}

@media screen and (max-width: 720px) {
  .benefits-section {
    display: none;
  }
}

/* End Benefits */

/* Start Values */

.values-section {
  padding-left: 50px;
  padding-right: 50px;
}

.eth-div {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 85px;
}

.eth-div p{
  width: 300px;
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #000000;
  font-size: 17px;
  margin-left: 50px;
  line-height: 25px;
}

.values-section .join {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 140px;
  margin-bottom: 100px;
}

.values-section h3 {
  font-family: Raleway;
  font-style: normal;
  font-weight: 500;
  font-size: 37px;
  margin-bottom: 25px;
  text-align: center;
}

.values-section h3 a {
  color: #000000;
}

/* End Values */

footer {
  background-image: url('/footer.svg');
  height: 654px;
}

footer h4 {
  position: relative;
  top: 400px;
  font-family: Raleway;
  font-style: normal;
  font-weight: 500;
  font-size: 25px;
  color: #FFFFFF;
  text-align: center;
}

footer h4 a {
  color: #FFFFFF;
}

footer p {
  position: relative;
  top: 580px;
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  color: #FFFFFF;
  text-align: center;
}

